Kafka Lab 6 complete
